# potts_model

./: .gitignore  README.md  pyproject.toml
libs/algorithms/: swendsen_wang.py
libs/ml/: dataset.py  modeling.py
libs/models/: grid_potts.py  potts.py  potts_model.py  types.py
libs/renormalization/: decimation.py  tensor_renromalization.py
libs/simulation/: swendsen_wang.py
src/: construct_dataset_sw.py  dev.py  supervised_learning.py
src/potts_model/: dev.py
src/potts_model/ml/: construct_dataset_sw.py  supervised_learning.py  unsupervised_learning.py
src/potts_model/rg/: run_square_trg.py
