[project]
name = "potts-model"
version = "0.1.0"
description = ""
authors = [
    {name = "woojinHan",email = "hwjin204@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "rustworkx (>=0.16.0,<0.17.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
