[project]
name = "potts-model"
version = "0.1.0"
description = ""
authors = [
    {name = "woojinHan",email = "hwjin204@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
packages = [
    { include = "libs", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.6"
logging = "^0.4.9.6"
scipy = "^1.15.1"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.packages]]
include = "potts_model"
from = "src"

[tool.poetry.scripts]
dev = "potts_model.dev:main"