[project]
name = "potts-model"
version = "0.1.0"
description = ""
authors = [
    {name = "woojinHan",email = "hwjin204@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "rustworkx (>=0.16.0,<0.17.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]
packages = [
    { include = "libs", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.6"
logging = "^0.4.9.6"
scipy = "^1.15.1"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "potts_model"
from = "src"

[tool.poetry.scripts]
dev = "potts_model.dev:main"
square_trg = "potts_model.rg.run_square_trg:main"
